2004-09-18  Alexander James Pasadyn  <ajpasadyn@users.sourceforge.net>

	* src/jacl/tcl/lang/library/init.tcl: Loop over
	path value list in env(TCLLIBPATH) instead of
	incorrectly assuming that it is a single value.
	[Bug 979897]

2003-09-30  Mo DeJong  <mdejong@users.sourceforge.net>

	* README.jacl:
	* README.tclblend: Remove note claiming Jacl
	and Tcl Blend were not ready for use in a
	production system.

2003-09-09  Mo DeJong  <mdejong@users.sourceforge.net>

	* configure: Regen.
	* tcljava.m4 (AC_JAVA_CLASSPATH): Avoid using
	an existing CLASSPATH env var under msys+mingw
	since the mixing of Win32 and Unix style paths
	was causing problems. Append an existing CLASSPATH
	env var value to the detected ac_java_classpath
	instead of skipping the detection step when a
	CLASSPATH is set.

2003-09-02  Mo DeJong  <mdejong@users.sourceforge.net>

	* Makefile.in: Update the tclblendDist rule
	so that win/libjvm.dll.a is included in the
	tar and zip files.

2003-08-17  Mo DeJong  <mdejong@users.sourceforge.net>

	* docs/website/faq.html: Add entry about stubs.
	* docs/website/index.html: Add 1.3.1 release news.

2003-08-07  Mo DeJong  <mdejong@users.sourceforge.net>

	Add tcljava-131-2003-08-07 tag to mark the
	1.3.1 release.

2003-08-07  Mo DeJong  <mdejong@users.sourceforge.net>

	* Makefile.in: Create a tmp directory and
	run install check for tclblend in this
	dir. This avoids a problem under Windows
	where the install rule crashes when a
	tclblend.dll is loaded from two different
	localtions on the file system.
	* jtclsh.in: Set the PATH env var to
	include Java and Tcl Blend shared lib locations.

2003-07-25  Mo DeJong  <mdejong@users.sourceforge.net>

	* Makefile.in: Fix install of xputils package
	so that it works when built outside the src dir.
	* configure: Regen.
	* tcljava.m4 (TCLJAVA_CHECK_TCLSH): Fix
	the TCLSH_LOC and TCLSH paths so that the
	install rule works under Win32 in both
	regular and debug mode.
